--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "dependencies": {
     "@athenajs/core": "^0.6.1",
-    "onoff": "^6.0.0",
     "reflect-metadata": "^0.1.13",
+    "rpio": "^2.2.0",
     "source-map-support": "^0.5.19",
     "tsyringe": "^4.3.0"
   },
@@ -29,6 +29,7 @@
     "@graphql-codegen/typescript-operations": "^1.17.8",
     "@types/lodash": "^4.14.159",
     "@types/node": "^14.0.27",
+    "@types/rpio": "^0.0.3",
     "tsc-watch": "^4.2.9",
     "typescript": "^3.9.7"
   }
